[package]
name = "simple-platformer"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "dynamic_linking",
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "mp3",
    "wav",
] }
bevy_kira_audio = { version = "0.18" }
bevy_asset_loader = { version = "0.19" }
bevy_ecs_ldtk = "0.8"
num = { version = "0.4.1", features = [] }
bevy_egui = "0.24.0"
bevy-inspector-egui = "0.22.1"
bevy_tweening = "0.9"

[build-dependencies]
embed-resource = "2.4.1"